elastic/ingress.yaml
#
# Expose Elasticsearch over port 80 on the URL http://elastic.local
#
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch-route
spec:
  parentRefs:
  - name: http-gateway
    namespace: apigateway
  hostnames:
  - api.elastic.local
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: elastic-svc
      kind: Service
      port: 9200
